use readString instead of readAllBytes